<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>authentication</artifactId>
        <groupId>com.github.iamhi.hizone</groupId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>authentication-core</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.iamhi.hizone</groupId>
            <artifactId>authentication-data</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.iamhi.hizone</groupId>
            <artifactId>authentication-config</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>
</project>